[tests] fix org.eclipse.jetty.osgi.boot versions in api tests