@@ -23,7 +23,7 @@
 							<requirement>
 								<type>eclipse-plugin</type>
 								<id>org.eclipse.jetty.osgi.boot</id>
-								<versionRange>[8.1.0,8.2.0)</versionRange>
+								<versionRange>0.0.0</versionRange>
 							</requirement>
 							<requirement>
 								<type>eclipse-plugin</type>
@@ -59,7 +59,7 @@
 				<artifactId>tycho-surefire-plugin</artifactId>
 				<configuration>
 					<useUIThread>false</useUIThread>
-					<argLine>-XX:MaxPermSize=256m -Xms512m -Xmx2g -XX:+AlwaysLockClassLoader -Dosgi.classloader.type=nonparallel -Djetty.home.bundle=org.eclipse.jetty.osgi.boot -Djetty.port=9090 -Dlogback.configurationFile=${basedir}/src/configuration/logback-maven.xml</argLine>
+					<argLine>-Xms2g -Xmx2g -XX:+AlwaysLockClassLoader -Dosgi.classloader.type=nonparallel -Djetty.home.bundle=org.eclipse.jetty.osgi.boot -Djetty.port=9090 -Dlogback.configurationFile=${basedir}/src/configuration/logback-maven.xml</argLine>
 					<bundleStartLevel>
 						<bundle>
 							<id>org.eclipse.jetty.osgi.boot</id>
